--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "immer": "9.0.15",
     "js-yaml": "4.1.0",
     "json-schema-generator": "2.0.6",
+    "mkcert": "^1.5.1",
     "monaco-editor": "0.34.0",
     "monaco-yaml": "^4.0.2",
     "prism-react-renderer": "1.3.5",
