--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -98,6 +98,7 @@
   "preview": false,
   "publisher": "ms-azuretools",
   "icon": "assets/logicapp.png",
+  "aiKey": "19a4f2b3-bf0a-4a6b-bd56-aa9d2cd85a75",
   "dependencies": {
     "tslib": "^2.0.0"
   }
