--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@fluentui/style-utilities": "8.7.7",
     "@fluentui/theme": "2.6.12",
     "@fluentui/web-components": "^2.5.4",
+    "@microsoft/applicationinsights-react-js": "^3.4.0",
     "@microsoft/fast-components": "^2.30.6",
     "@microsoft/fast-element": "^1.10.5",
     "@microsoft/fast-foundation": "^2.46.12",
     "@microsoft/fast-react-wrapper": "^0.3.13",
+    "@microsoft/vscode-azext-utils": "^0.3.15",
     "@monaco-editor/react": "4.4.5",
     "@react-hookz/web": "15.1.0",
     "@reduxjs/toolkit": "1.8.5",
