--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@fluentui/theme": "2.6.12",
     "@fluentui/web-components": "^2.5.4",
     "@microsoft/applicationinsights-react-js": "^3.4.0",
+    "@microsoft/applicationinsights-web": "^2.8.9",
     "@microsoft/fast-components": "^2.30.6",
     "@microsoft/fast-element": "^1.10.5",
     "@microsoft/fast-foundation": "^2.46.12",
