Quick test workflow change

--- a/.github/workflows/nicolas-build-test.yml
+++ b/.github/workflows/nicolas-build-test.yml
@@ -34,7 +34,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.AUTOMATION_PAT }}
-          branch: ${{ github.ref }}
+          branch: ${GITHUB_REF}
 
   build:
     runs-on: ubuntu-latest
