--- a/.github/workflows/nicolas-build-test.yml
+++ b/.github/workflows/nicolas-build-test.yml
@@ -26,12 +26,12 @@ jobs:
         with:
           node-version: 16
 
-      - run: npm ci
-
       - name: 'Set DM VSIX aiKey in package.json'
-        run: echo "`jq '.aiKey="${{ env.AI_KEY }}"' package.json`" > package.json
+        run: echo "`jq '.aiKey="${{ env.AI_KEY }}"' apps/vs-code-data-mapper/package.json`" > apps/vs-code-data-mapper/package.json
 
-      - run: cat package.json
+      - run: cat apps/vs-code-data-mapper/package.json
+
+      - run: npm ci
 
       - run: npx nx build vs-code-data-mapper
       - run: npx nx build vs-code-data-mapper-react
