--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -58,7 +58,7 @@ jobs:
         run: npm run bump -- --skip.commit --skip.tag
 
       - name: 'Set DM VSIX aiKey in package.json'
-        run: echo "`jq '.aiKey="$AI_KEY"' package.json`" > package.json
+        run: echo "`jq '.aiKey="${{ env.AI_KEY }}"' apps/vs-code-data-mapper/src/package.json`" > apps/vs-code-data-mapper/src/package.json
 
       - run: npx nx build vs-code-data-mapper
       - run: npx nx build vs-code-data-mapper-react
