--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -1,5 +1,6 @@
 {
   "name": "microsoft-data-mapper-vscode-extension",
+  "displayName": "Azure Logic Apps - Data Mapper",
   "version": "0.2.16",
   "main": "main.js",
   "repository": "https://github.com/Azure/logic_apps_designer",
