--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -1,6 +1,7 @@
 {
   "name": "microsoft-data-mapper-vscode-extension",
   "displayName": "Azure Logic Apps - Data Mapper",
+  "description": "Create mappings between schemas",
   "version": "0.2.16",
   "main": "main.js",
   "repository": "https://github.com/Azure/logic_apps_designer",
