[DM | Telemetry] React app telemetry w/ AppInsights (#1303)
* Unrelated - auto-expand schemaRoot when theres a search term

* Add necessary AppInsights telemetry package

* Set up App Insights + wrap app in AppInsights context provider

* Update DMD component typing convention

* Track data map generation exceptions

* Track layouting and function list major errors

* Track schema load errors/exceptions in the Config Panel + fix schema tree search auto-expand

* Playing around with GH Actions stuff

* Quick test workflow change

* Test workflow change

* Remove test workflow

* Give VSIX displayName

* Test React app telemetry from build

* Wrapping up + give DM VSIX a description for prettification

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -1,5 +1,7 @@
 {
   "name": "microsoft-data-mapper-vscode-extension",
+  "displayName": "Azure Logic Apps - Data Mapper",
+  "description": "Create mappings between schemas",
   "version": "0.2.16",
   "main": "main.js",
   "repository": "https://github.com/Azure/logic_apps_designer",
@@ -98,7 +100,7 @@
   "preview": false,
   "publisher": "ms-azuretools",
   "icon": "assets/logicapp.png",
-  "aiKey": "19a4f2b3-bf0a-4a6b-bd56-aa9d2cd85a75",
+  "aiKey": "setInGitHubBuild",
   "dependencies": {
     "tslib": "^2.0.0"
   }
