Add new designer and save command in new vscode extension (#1336)
* Add register commands and update launch command to compile project

* Update command to look at new designer

* Add command to menus

* Update command and add extension context

* Update command to class

* Add web view communication

* Add designer api and get panel metadata

* Add support for telemetry

* Update panelMetaData communication

* Add resolution service

* Add designer base

* Add connection references

* Move functions to designer base

* Move web view content to base designer

* Add baseUrl

* Add azure connector details and local settings

* Add apiHubServiceDetails

* Add AzureAccountTreeItemWithProjects

* Add support for command palette

* Add getSubscription prompt step

* Initialize icons

* Add theme observable and theme changing in new design

* Add command bar to designer

* Add save functionalitites and models

* Update command to send params to vscode extension

* Add save function and get deserialized workflow

* Remove unused func and update save button legend

* Fix constants

* Delete unused functions

* Move connection interfaces to models

* Remove function

* Fix eslint warnings

* Update constants and designer base

* Update import

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -1,6 +1,8 @@
 {
   "name": "microsoft-logic-app-vscode-extension",
+  "displayName": "Azure Logic Apps (Standard)",
   "version": "0.2.20",
+  "aiKey": "2fc394da-7c11-4c1c-b776-17763031415d",
   "main": "main.js",
   "engines": {
     "vscode": "^1.64.0"
@@ -8,16 +10,39 @@
   "contributes": {
     "commands": [
       {
-        "command": "logicAppsExtension.start",
-        "title": "Open New Designer"
+        "command": "logicAppsExtension.openDesigner",
+        "title": "Open New Designer",
+        "category": "Azure Logic Apps"
       }
-    ]
+    ],
+    "menus": {
+      "view/item/context": [
+        {
+          "command": "logicAppsExtension.openDesigner",
+          "when": "view == azLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
+          "group": "1@2"
+        }
+      ],
+      "explorer/context": [
+        {
+          "command": "logicAppsExtension.openDesigner",
+          "when": "resourceFilename==workflow.json",
+          "group": "navigation@3"
+        }
+      ],
+      "commandPalette": [
+        {
+          "command": "logicAppsExtension.openDesigner",
+          "when": "resourceFilename==workflow.json"
+        }
+      ]
+    }
   },
   "extensionDependencies": [
     "ms-vscode.azure-account"
   ],
   "activationEvents": [
-    "onCommand:logicAppsExtension.start"
+    "onCommand:logicAppsExtension.openDesigner"
   ],
   "galleryBanner": {
     "color": "#015cda",
