--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build:designer-client-services": "nx run services-designer-client-services:build",
     "build:parsers": "nx run parsers:build",
     "build:vscode-react": "nx run vs-code-react:build",
+    "build:vscode-designer": "nx run vs-code-designer:build && nx run vs-code-designer-react:build",
     "build:utils": "nx run utils:build",
     "bump": "standard-version --no-verify",
     "vscode:designer:pack": "cd ./dist/apps/vs-code-designer && npm install && vsce package",
@@ -107,7 +108,12 @@
     "tslib": "2.4.0",
     "url": "^0.11.0",
     "util": "^0.12.4",
-    "web-worker": "1.2.0"
+    "web-worker": "1.2.0",
+    "@microsoft/vscode-azext-utils": "^0.3.12",
+    "request-promise": "^4.2.4",
+    "vscode-nls": "^4.1.1",
+    "@azure/ms-rest-js": "^2.2.1",
+    "@microsoft/vscode-azext-azureutils": "^0.3.5"
   },
   "devDependencies": {
     "@babel/core": "7.18.13",
