--- a/apps/vs-code-designer/project.json
+++ b/apps/vs-code-designer/project.json
@@ -10,7 +10,15 @@
         "outputPath": "dist/apps/vs-code-designer",
         "main": "apps/vs-code-designer/src/main.ts",
         "tsConfig": "apps/vs-code-designer/tsconfig.app.json",
-        "assets": ["apps/vs-code-designer/src/assets", "apps/vs-code-designer/src/package.json"],
+        "assets": [
+          "apps/vs-code-designer/src/assets",
+          "apps/vs-code-designer/src/package.json",
+          {
+            "glob": "**/*.svg",
+            "input": "node_modules/@microsoft/vscode-azext-azureutils/resources",
+            "output": "node_modules/@microsoft/vscode-azext-azureutils/resources"
+          }
+        ],
         "externalDependencies": ["vscode", "commonjs"]
       },
       "configurations": {
