--- a/libs/utils/tsconfig.json
+++ b/libs/utils/tsconfig.json
@@ -9,7 +9,7 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
   },
-  "files": [],
+  "files": ["../../types/LogicAppsV2.d.ts"],
   "include": [],
   "references": [
     {
