--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,12 +18,12 @@
     "noImplicitReturns": false,
     "baseUrl": ".",
     "paths": {
-      "@@microsoft/logicappsux/designer-client-services": ["libs/services/designer-client-services/src/index.ts"],
-      "@@microsoft/logicappsux/intl": ["libs/services/intl/src/index.ts"],
-      "@@microsoft/logicappsux/parsers": ["libs/parsers/src/index.ts"],
       "@microsoft/designer-ui": ["libs/designer-ui/src/index.ts"],
       "@microsoft/logic-apps-data-mapper": ["libs/data-mapper/src/index.ts"],
       "@microsoft/logic-apps-designer": ["libs/designer/src/index.ts"],
+      "@microsoft/logicappsux/designer-client-services": ["libs/services/designer-client-services/src/index.ts"],
+      "@microsoft/logicappsux/intl": ["libs/services/intl/src/index.ts"],
+      "@microsoft/logicappsux/parsers": ["libs/parsers/src/index.ts"],
       "@microsoft/nx-playwright": ["libs/plugins/playwright/src/index.ts"],
       "@microsoft/utils-logic-apps": ["libs/utils/src/index.ts"]
     }
