--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -31,6 +31,11 @@
         "command": "logicAppsExtension.loadMore",
         "title": "Load More",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.viewContent",
+        "title": "View Content",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -62,6 +67,11 @@
           "command": "logicAppsExtension.openDesigner",
           "when": "view == newAzLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
           "group": "1@2"
+        },
+        {
+          "command": "logicAppsExtension.viewContent",
+          "when": "view == newAzLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
+          "group": "2@1"
         }
       ],
       "explorer/context": [
@@ -105,6 +115,7 @@
   "activationEvents": [
     "onCommand:logicAppsExtension.openDesigner",
     "onCommand:logicAppsExtension.loadMore",
+    "onCommand:logicAppsExtension.viewContent",
     "onView:newAzLogicApps",
     "onDebugInitialConfigurations"
   ],
