Restrict view content command from command palette

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -93,6 +93,10 @@
         {
           "command": "logicAppsExtension.loadMore",
           "when": "never"
+        },
+        {
+          "command": "logicAppsExtension.viewContent",
+          "when": "never"
         }
       ]
     },
