--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@reduxjs/toolkit": "1.8.5",
     "@storybook/core-server": "6.5.10",
     "@swc/helpers": "~0.3.3",
+    "@types/pathfinding": "^0.0.6",
     "@use-it/event-listener": "0.1.7",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -85,6 +86,7 @@
     "lodash.merge": "^4.6.2",
     "monaco-editor": "0.34.0",
     "monaco-yaml": "^4.0.2",
+    "pathfinding": "^0.4.18",
     "prism-react-renderer": "1.3.5",
     "process": "^0.11.10",
     "react": "18.2.0",
@@ -156,7 +158,6 @@
     "@types/js-yaml": "4.0.5",
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "18.7.18",
-    "@types/pathfinding": "^0.0.6",
     "@types/react": "18.0.20",
     "@types/react-dnd-multi-backend": "6.0.2",
     "@types/react-dom": "18.0.6",
@@ -187,6 +188,7 @@
     "jest": "28.1.3",
     "jest-junit": "13.2.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "jsonc-parser": "^2.3.1",
     "less-loader": "11.0.0",
     "lexical": "^0.5.0",
     "playwright": "1.27.0",
@@ -203,7 +205,6 @@
     "vsce": "^2.11.0",
     "webpack-cli": "4.10.0",
     "worker-loader": "3.0.8",
-    "yalc": "1.0.0-pre.53",
-    "jsonc-parser": "^2.3.1"
+    "yalc": "1.0.0-pre.53"
   }
 }
