--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
       - run: npx nx affected --target=build --parallel
       - run: npx nx affected --target=test --parallel
       - run: npx nx e2e designer-e2e --reporter=html
+      - run: npx nx e2e data-mapper-e2e --reporter=html
 
       - uses: actions/upload-artifact@v2
         if: always()
