--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-use": "17.4.0",
     "reactflow": "^11.2.0",
     "regenerator-runtime": "0.13.9",
+    "request": "^2.88.2",
     "request-promise": "^4.2.4",
     "stream-http": "^3.2.0",
     "tiny-invariant": "1.2.0",
