--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -114,7 +114,8 @@
     ]
   },
   "extensionDependencies": [
-    "ms-vscode.azure-account"
+    "ms-vscode.azure-account",
+    "ms-azuretools.vscode-azurefunctions"
   ],
   "activationEvents": [
     "onCommand:logicAppsExtension.openDesigner",
