Add create codeless step and remove no param reasign rule

--- a/apps/vs-code-designer/.eslintrc.json
+++ b/apps/vs-code-designer/.eslintrc.json
@@ -3,11 +3,13 @@
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "files": ["*.ts"],
+      "rules": {
+        "no-param-reassign": "off"
+      }
     },
     {
-      "files": ["*.ts", "*.tsx"],
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {}
     },
     {
