Add Create App Command (#1456)
* Add command to package.json

* Add createLogicApp command

* Add create logic app logic from command palette when deploy

* Change advance identity step to logic app folder

* Add comments to functions and remove unused functions

* Update constant params

* Add creation confirmation message

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -68,6 +68,11 @@
         "command": "logicAppsExtension.deploySlot",
         "title": "Deploy to Slot...",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.createLogicApp",
+        "title": "Create Logic App in Azure...",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -111,6 +116,11 @@
           "command": "logicAppsExtension.selectSubscriptions",
           "when": "view == newAzLogicApps && viewItem == azureextensionui.azureSubscription",
           "group": "inline"
+        },
+        {
+          "command": "logicAppsExtension.createLogicApp",
+          "when": "view == newAzLogicApps && viewItem == azureextensionui.azureSubscription",
+          "group": "1@1"
         },
         {
           "command": "logicAppsExtension.openDesigner",
