--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -73,6 +73,11 @@
         "command": "logicAppsExtension.createLogicApp",
         "title": "Create Logic App in Azure...",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.createLogicAppAdvanced",
+        "title": "Create Logic App in Azure... (Advanced)",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -121,6 +126,11 @@
           "command": "logicAppsExtension.createLogicApp",
           "when": "view == newAzLogicApps && viewItem == azureextensionui.azureSubscription",
           "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.createLogicAppAdvanced",
+          "when": "view == newAzLogicApps && viewItem == azureextensionui.azureSubscription",
+          "group": "1@2"
         },
         {
           "command": "logicAppsExtension.openDesigner",
@@ -229,6 +239,8 @@
     "onCommand:logicAppsExtension.createCodeless",
     "onCommand:logicAppsExtension.deploy",
     "onCommand:logicAppsExtension.deploySlot",
+    "onCommand:logicAppsExtension.createLogicApp",
+    "onCommand:logicAppsExtension.createLogicAppAdvanced",
     "onView:newAzLogicApps",
     "onDebugInitialConfigurations"
   ],
