--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -78,6 +78,11 @@
         "command": "logicAppsExtension.createLogicAppAdvanced",
         "title": "Create Logic App in Azure... (Advanced)",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.startLogicApp",
+        "title": "Start",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -151,6 +156,11 @@
           "command": "logicAppsExtension.deploySlot",
           "when": "view == newAzLogicApps && viewItem == azLogicAppsSlot",
           "group": "3@2"
+        },
+        {
+          "command": "logicAppsExtension.startLogicApp",
+          "when": "view == newAzLogicApps && viewItem =~ /^azFunc(Production|)Slot$/",
+          "group": "2@1"
         }
       ],
       "explorer/context": [
@@ -241,6 +251,7 @@
     "onCommand:logicAppsExtension.deploySlot",
     "onCommand:logicAppsExtension.createLogicApp",
     "onCommand:logicAppsExtension.createLogicAppAdvanced",
+    "onCommand:logicAppsExtension.startLogicApp",
     "onView:newAzLogicApps",
     "onDebugInitialConfigurations"
   ],
