--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -228,7 +228,7 @@
         },
         {
           "command": "logicAppsExtension.refresh",
-          "when": "view == newAzLogicApps && viewItem =~ /Functions;/i",
+          "when": "view == newAzLogicApps && viewItem =~ /Workflows;/i",
           "group": "1@1"
         },
         {
